--- a/projects/ariyadey-main/public/i18n/fa.json
+++ b/projects/ariyadey-main/public/i18n/fa.json
@@ -26,7 +26,7 @@
     "description": "سلام! من آریا محب هستم؛ مهندس نرم‌افزار با بیش از ۵ سال تجربه در توسعه اپلیکیشن‌های تحت وب و سازمانی. تخصصم بیشتر روی Angular، Java و فریم‌ورک Spring متمرکز شده.\n\nعلاقه‌مندم نرم‌افزارهایی بسازم که هم باکیفیت باشن، هم عملکرد بالایی داشته باشن و مشکلی از دنیای واقعی رو حل کنن. از اینکه نیازهای پیچیده رو تبدیل به تجربه‌های کاربری ساده و سیستم‌های پشتیبان کارآمد کنم واقعاً لذت می‌برم. همیشه سعی کردم کدی بنویسم که هم تمیز باشه، هم قابل نگهداری و توسعه.\n\nاین وب‌سایت جاییه برای به اشتراک گذاشتن مسیر حرفه‌ای من و پروژه‌هایی که نشون می‌دن چقدر برام رشد فنی و یادگیری مداوم اهمیت داره.\n\nاگه پروژه‌ای دارین که دنبال آدمی با ذهن تحلیلی و انگیزه بالا برای همکاری توی یه تیم بین‌المللی و ریموت می‌گردین، خوشحال می‌شم ارتباط بگیریم. می‌تونید کارهام رو توی بخش پروژه‌ها ببینید.",
     "avatar-alt": "{{me.full-name}} - {{me.headline}}",
     "project": {
-      "ariyadey": {
+      "sirine": {
         "title": "وب‌سایت شخصی",
         "description": "- توسعه و راه‌اندازی یک وب‌سایت شخصی از پایه، به‌عنوان یک پورتفولیوی پویا برای نمایش مسیر حرفه‌ای و پروژه‌هایم.\n- پیاده‌سازی رابط کاربری واکنش‌گرا با Angular و TypeScript، با تضمین سازگاری میان مرورگرها و عملکرد بهینه.\n- استفاده از i18n برای پشتیبانی چندزبانه (انگلیسی و فارسی) و بهینه‌سازی برای SEO از طریق تگ‌های hreflang و canonical دینامیک.\n- بهره‌گیری از GitHub Actions برای CI/CD و اتوماسیون فرآیندهای build، تست و دیپلوی به Cloudflare Workers جهت تحویل جهانی محتوا و مزایای edge computing."
       },
